Fixata immagine in overflow a destra

--- a/css/myStyle.css
+++ b/css/myStyle.css
@@ -67,6 +67,11 @@ hr {
   
 }
 
+.project-cell {
+	padding: 0px 80px; 
+	margin: 0 5px;
+}
+
 .fill {
     /*display: flex;*/
     align-items: center;
@@ -77,4 +82,4 @@ hr {
 	object-fit: cover;
 	width: 100%;
 	height: 100%;
-    }
+}
